correct font import method and padding

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Outfit">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | QR code component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -17,7 +19,7 @@
       padding: 0;
       margin: 0;
       background-color: hsl(212, 45%, 89%);
-      font-family: "Outfit";
+      font-family: 'Outfit', sans-serif;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -36,18 +38,16 @@
 
     img {
       width: 100%;
-      margin: 4px;
       border-radius: 10px;
     }
 
     .description-container {
       font-size: 15px;
       text-align: center;
-      padding: 5px 20px;
+      padding: 0px 18px;
 
       .title {
         font-weight: 700;
-
       }
 
       .body {
@@ -60,7 +60,7 @@
       font-size: 11px;
       text-align: center;
       position: absolute;
-      bottom: 15px;
+      bottom: 10px;
     }
 
     .attribution a {
